# CG

./: README.md
CG_F1/: .gitignore
CG_F1/TP/: Makefile  figures.cpp  generator.cpp
CG_F1/TP/Engine/: CMakeLists.txt  Engine.cpp  file.xml
CG_F1/TP/Engine/Figures/: box.3d  plane.3d
CG_F1/TP/generator.dSYM/Contents/Resources/DWARF/: generator
CG_F1/TP/headers/: figures.h
CG_F2/Tp/: Makefile  figures.cpp  generator  generator.cpp
CG_F2/Tp/Engine/: CMakeLists.txt  engine.cpp
CG_F2/Tp/Engine/Figures/: box.3d  cone.3d  sphere.3d  torus.3d
CG_F2/Tp/Engine/headers/: baseElement.h  camera.h  groupElement.h  modelElement.h  modelsElement.h  rotateElement.h  scaleElement.h  sceneElement.h  translateElement.h  triangle.h
CG_F2/Tp/Engine/src/: camera.cpp  groupElement.cpp  modelElement.cpp  modelsElement.cpp  rotateElement.cpp  scaleElement.cpp  sceneElement.cpp  translateElement.cpp  triangle.cpp
CG_F2/Tp/Engine/xmlfiles/: file.xml  filetest.xml  ss.xml
CG_F2/Tp/generator.dSYM/Contents/Resources/DWARF/: generator
CG_F2/Tp/headers/: figures.h
CG_F3/Tp/: Makefile  figures.cpp  generator  generator.cpp  patch.cpp
CG_F3/Tp/Engine/: CMakeLists.txt  engine.cpp
CG_F3/Tp/Engine/Figures/: patch.3d  sphere.3d  torus.3d
CG_F3/Tp/Engine/headers/: camera.h  containerElement.h  modelElement.h  translateElement.h
CG_F3/Tp/Engine/src/: camera.cpp  containerElement.cpp  groupElement.cpp  modelElement.cpp  scaleElement.cpp  translateElement.cpp
CG_F3/Tp/Engine/xmlfiles/: file.xml  filetest.xml  ss.xml  teapot.xml
CG_F3/Tp/generator.dSYM/Contents/Resources/DWARF/: generator
CG_F3/Tp/headers/: figures.h  patch.h
CG_F4/TP/: Makefile  figures.cpp  generator  generator.cpp  patch.cpp
CG_F4/TP/Engine/: CMakeLists.txt  engine.cpp
CG_F4/TP/Engine/Figures/: box.3d  cone.3d  patch.3d  plane.3d  sphere.3d  torus.3d
CG_F4/TP/Engine/headers/: baseElement.h  groupElement.h  lightElement.h  modelElement.h  modelsElement.h  rotateElement.h  scaleElement.h  sceneElement.h  translateElement.h
CG_F4/TP/Engine/src/: camera.cpp  lightElement.cpp  modelElement.cpp  modelsElement.cpp  rotateElement.cpp  sceneElement.cpp  translateElement.cpp
CG_F4/TP/Engine/xmlfiles/: demoCatmullNoLight.xml  demoLightMatTexture.xml  ss.xml  ssNoMat.xml  ssRGB.xml
CG_F4/TP/generator.dSYM/Contents/Resources/DWARF/: generator
CG_F4/TP/headers/: figures.h  patch.h
